src/components/WindowLabel/WindowLabel.module.scss
.window-label {
	flex-grow: 1;
	height: 20px;
	border: {
		top: 1px solid #fefefe;
		right: 1px solid #0f0f0f;
		bottom: 1px solid #0f0f0f;
		left: 1px solid #fefefe;
	}
	background-color: #aeaeae;
	font-size: 14px;

	&--is-active {
		background-color: #6e8ebe;
	}

	&__title {
		margin-left: 10px;
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
	}
}

